src/objects/CM_Hours_of_Operation__c.object
<CustomObject>
    <fields>
        <fullName>CM_Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Friday_Closing_Hour__c</fullName>
        <label>Friday Closing Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Friday_Opening_Hour__c</fullName>
        <label>Friday Opening Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Monday_Closing_Hour__c</fullName>
        <description>The time the Provider Closes on Mondays</description>
        <label>Monday Closing Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Monday_Opening_Hour__c</fullName>
        <description>When the Provider opens on Mondays</description>
        <label>Monday Opening Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Open_24_7__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a 24 hour facility?</description>
        <label>Open 24/7</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Part_of_Day_Code__c</fullName>
        <label>Part of Day Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Session1</fullName>
                    <label>Session 1</label>
                </value>
                <value>
                    <fullName>Session2</fullName>
                    <label>Session 2</label>
                </value>
                <value>
                    <fullName>Session3</fullName>
                    <label>Session 3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_HoO_Saturday_Closing_Hour__c</fullName>
        <label>Saturday Closing Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Saturday_Opening_Hour__c</fullName>
        <label>Saturday Opening Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Service_Payee_Location_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service &amp; Payee Location Address</label>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipLabel>Hours of Operation</relationshipLabel>
        <relationshipName>Hours_of_Operation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Sunday_Closing_Hour__c</fullName>
        <label>Sunday Closing Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Sunday_Opening_Hour__c</fullName>
        <label>Sunday Opening Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Thursday_Closing_Hour__c</fullName>
        <label>Thursday Closing Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Thursday_Opening_Hour__c</fullName>
        <label>Thursday Opening Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Tuesday_Closing_Hour__c</fullName>
        <description>The time the Provider closes on Tuesdays</description>
        <label>Tuesday Closing Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Tuesday_Opening_Hour__c</fullName>
        <description>The time the Provider opens on Tuesdays</description>
        <label>Tuesday Opening Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Wednesday_Closing_Hour__c</fullName>
        <description>The time the Provider closes on Wednesdays</description>
        <label>Wednesday Closing Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_HoO_Wednesday_Opening_Hour__c</fullName>
        <description>The time the Provider opens on Wednesdays</description>
        <label>Wednesday Opening Hour</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>Hours of Operation</label>
    <nameField>
        <displayFormat>HO-{0}</displayFormat>
        <label>Hours of Operation Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hours of Operation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>